--- a/public/css/Waitlist.css
+++ b/public/css/Waitlist.css
@@ -1,37 +1,156 @@
-/* Waitlist */
+/* waitlist */
 .waitlist {
     position: relative;
-    display: grid;
-    place-items: center;
     width: 834px;
     height: 1194px;
-    background: #E8ECF0;
-    transition: transform 0.5s ease;
-    transform: translateX(0);
-  }
 
-/* Title and logo */
-.title-logo {
+    background: #E8ECF0;
+}
+
+/* Estimated wait */
+.est-wait {
     position: absolute;
-    width: 282px;
-    height: 45px;
-    left: calc(50% - 282px/2);
-    top: 35px;
+    width: 834px;
+    height: 21px;
+    left: calc(50% - 834px/2);
+    top: calc(50% - 21px/2 - 44.5px);
+
+    font-family: 'Unlock';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 21px;
+    text-align: center;
+
+    color: #000000;
+}
+
+/* Queue */
+.queue {
+    position: absolute;
+    width: 834px;
+    height: 103px;
+    left: calc(50% - 834px/2);
+    top: calc(50% - 103px/2 - 127.5px);
+
+    font-family: 'Unlock';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 96px;
+    line-height: 103px;
+    /* identical to box height */
+    text-align: center;
+
+    color: #000000;
+
+
+}
+
+/* Hop in line button */
+.hop-in-line-button {
+    /* Auto layout */
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    gap: 10px;
+
+    position: absolute;
+    width: 440px;
+    height: 64px;
+    left: calc(50% - 220px + 1px); /* Adjusted 440px/2 for clarity */
+    top: 589px;
+
+    background: #111D4A;
+    border-radius: 8px;
+}
+
+/* Hop in line text */
+.hop-in-line-button span {
+    width: 180px;
+    height: 34px;
+
+    font-family: 'Unlock', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 34px;
+    text-align: center;
+
+    color: #FFFFFF;
+
+    /* Inside auto layout */
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+}
+
+
+/* Size */
+.size-text {
+    position: absolute;
+    width: 225px;
+    height: 50px;
+    left: calc(50% - 225px/2 + 325px);
+    top: calc(50% - 50px/2 + 130px);
+
+    font-family: 'Unlock';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+
+    color: #000000;
+}
+
+
+/* Team */
+.team-text {
+    position: absolute;
+    width: 225px;
+    height: 50px;
+    left: calc(50% - 225px/2 - 130px);
+    top: calc(50% - 50px/2 + 130px);
+
+    font-family: 'Unlock';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 21px;
+    display: flex;
+    align-items: center;
+    text-align: right;
+
+    color: #000000;
+}
+
+/* grey-line */
+.grey-line{
+    position: absolute;
+    width: 585px;
+    height: 0px;
+    left: 125px;
+    top: 695px;
+
+    border: 3px solid #D9D9D9;
 }
 
 /* Title */
-.title {
+.title-text {
     position: absolute;
     width: 222px;
     height: 35px;
-    left: 0;
-    top: 0;
+    left: calc(50% - 222px/2 - 30px);
+    top: calc(50% - 35px/2 - 539.5px);
 
     font-family: 'Unlock';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
-    line-height: 35px;
+    line-height: 34px;
     /* identical to box height */
     text-align: center;
 
@@ -41,48 +160,65 @@
 /* our-logo */
 .our-logo {
     position: absolute;
-    right: 0;
-    bottom: 3px;
+    left: 61.51%;
+    right: 33.09%;
+    top: 2.93%;
+    bottom: 93.3%;
 }
 
-/* Scoreboard */
-.scoreboard {
+.left-logo {
+    display: absolute;
+  
+    /* Define a size for the image container */
+    width: 140px;
+    height: 140px;
+    left: 201px;
+    top: 188px;
+  
+    /* Optional: Make the container round (only if needed) */
+    border-radius: 50%;
+  
+    /* Add a placeholder background or border if the image fails to load */
+    background-color: #ddd;
+    border: 2px solid #ccc;
+  
+    /* Make sure the image fits inside */
+    overflow: hidden;
+}
+
+.dynamic-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Left team */
+.left-name {
     position: absolute;
-    display: grid;
-    place-items: center;
-    width: 585px;
-    height: 320px;
-    left: 123px;
-    top: 98px;
-    text-align: center;
-}
-
-/* Court name */
-.court-name {
-    position:absolute;
-    width: 585x;
-    height: 50px;
-    top: 10px;
+    width: 283px;
+    height: 82px;
+    left: 125px;
+    top: 336px;
 
     font-family: 'Unlock';
     font-style: normal;
     font-weight: 400;
-    font-size: 48px;
-    line-height: 50px;
+    font-size: 24px;
+    line-height: 26px;
     text-align: center;
 
     color: #000000;
 }
 
 
-
 /* vs */
 .vs {
     position: absolute;
     width: 70px;
-    height: 51px;
-    top: 33%;
-    
+    height: 50px;
+    left: calc(50% - 70px/2 + 1px);
+    top: calc(50% - 50px/2 - 339px);
+
     font-family: 'Unlock';
     font-style: normal;
     font-weight: 400;
@@ -93,76 +229,60 @@
     color: #000000;
 }
 
-/* Left team*/
-.left-team {
+/* court name */
+.court-name {
     position: absolute;
-    width: 110px;
-    height: 172px;
-    left: 10%;
-    bottom: 20%;
-}
-
-
-/* Left logo*/
-.left-logo {
-    position: absolute;
-    left: 4.55%;
-    right: 4.55%;
-    top: 0%;
-    bottom: 41.86%;
-
-}
-
-/* Left name */
-.left-name {
-    position: absolute;
-    top: 80%;
-    bottom: 0%;
-    width: 300px;
-    left: -150px;
+    width: 834px;
+    height: 50px;
+    top: 110px;
 
     font-family: 'Unlock';
     font-style: normal;
     font-weight: 400;
-    font-size: 32px;
-    line-height: 34px;
+    font-size: 48px;
+    line-height: 51px;
+    align-items: center;
     text-align: center;
 
     color: #000000;
 }
 
 
-/* Right team */
-.right-team {
-    position: absolute;
-    width: 110px;
-    height: 172px;
-    right: 10%;
-    bottom: 20%;
-}
-
-/* Right logo */
-.right-logo {
-    position: absolute;
-    left: 4.55%;
-    right: 4.55%;
-    top: 0%;
-    bottom: 41.86%;
-
-}
-
-/* Right name */
+/* right team */
 .right-name {
     position: absolute;
-    top: 80;
-    bottom: 0%;
+    width: 281px;
+    height: 82px;
+    left: 428px;
+    top: 336px;
 
     font-family: 'Unlock';
     font-style: normal;
     font-weight: 400;
-    font-size: 32px;
-    line-height: 34px;
+    font-size: 24px;
+    line-height: 26px;
     text-align: center;
 
     color: #000000;
+}
+
+/* right logo*/
+.right-logo {
+    display: absolute;
+  
+    /* Define a size for the image container */
+    width: 140px;
+    height: 140px;
+    left: 201px;
+    top: 188px;
+  
+    /* Optional: Make the container round (only if needed) */
+    border-radius: 50%;
+  
+    /* Add a placeholder background or border if the image fails to load */
+    background-color: #ddd;
+    border: 2px solid #ccc;
+  
+    /* Make sure the image fits inside */
+    overflow: hidden;
 }
